feat: refactor API structure
