# backend/docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/api/health": {
             "get": {
-                "description": "Retorna status OK se a API estiver funcionando corretamente",
+                "description": "Retorna status OK se API estiver funcionando corretamente",
                 "consumes": [
                     "application/json"
                 ],
@@ -54,7 +54,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.Register"
+                                "$ref": "#/definitions/models.Register"
                             }
                         }
                     },
@@ -88,7 +88,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Register"
+                            "$ref": "#/definitions/models.Register"
                         }
                     }
                 ],
@@ -96,7 +96,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.Register"
+                            "$ref": "#/definitions/models.Register"
                         }
                     },
                     "400": {
@@ -139,7 +139,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.User"
+                                "$ref": "#/definitions/models.User"
                             }
                         }
                     }
@@ -164,7 +164,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 ],
@@ -172,7 +172,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "400": {
@@ -222,7 +222,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "400": {
@@ -248,7 +248,7 @@
         }
     },
     "definitions": {
-        "main.Register": {
+        "models.Register": {
             "type": "object",
             "properties": {
                 "audio_uid": {
@@ -280,7 +280,7 @@
                 }
             }
         },
-        "main.User": {
+        "models.User": {
             "type": "object",
             "properties": {
                 "created_at": {
